--- a/home.html
+++ b/home.html
@@ -75,6 +75,9 @@
 					<h4 style="background-color: #e5dfdf;">USE CODE :
 						<span style="font-weight: 500;background-color: #0d6892;padding: 5px 25px 5px 25px;color: white;">SALE</span></h4>
 				</div>
+                <div class="timer" id="timer">
+					00:00:00
+				</div>
 				<div class="head-get-started">
 					<button>Get Started now</button>
 				</div>
@@ -86,6 +89,26 @@
 		</div>
 	</header>
 	<!-- HEADER END HERE -->
+
+	<!-- SERVICES START HERE -->
+	<div class="container">
+		<h1>Our Services</h1>
+		<div class="services">
+			<div class="service">
+				<h2>Web Design</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+			<div class="service">
+				<h2>Graphic Design</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+			<div class="service">
+				<h2>Social Media Marketing</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+		</div>
+	</div>
+	<!-- SERVICES END HERE -->
 	<!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- OWL CAROUSEL -->
