--- a/home.html
+++ b/home.html
@@ -109,11 +109,21 @@
 		</div>
 	</div>
 	<!-- SERVICES END HERE -->
+	<!-- DOMAIN SHEARCH START HERE -->
+	<div class="container_search">
+		<div class="input-container">
+			<input type="text" id="domainInput" placeholder="Entre le nom de votre entreprice..">
+			<input type="submit" value="Recherchez ici" onclick="checkAvailability()">
+		</div>
+		<div id="domain"></div>
+	</div>
+	<!-- DOMAIN END HERE -->
 	<!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- OWL CAROUSEL -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
     <!-- APP SCRIPT -->
 	<script src="websugu.js"></script>
+	
 </body>
 </html>
