--- a/home.html
+++ b/home.html
@@ -116,7 +116,7 @@
 			<h2>Hébergement</h2>
 			<img src="images/vector img/Cloud hosting-rafiki.png" alt="">
 			<h3>01<span>/03</span></h3>
-			<button onclick="showDetails('solution1')">voir plus</button>
+			<button onclick="showDetails('solution1')">voir plus <i class="fa-solid fa-caret-down" style="color: #2d2a2a;"></i></button>
 			<div id="solution1Details" style="display: none;">
 				<p>Gestion de nom de domaine et hébergement web professionnels avec les meilleurs panneaux de controle et pleines d'autres fonctionnalités.  </p>
 			</div>
@@ -125,7 +125,7 @@
 			<h2>Conception</h2>
 			<img src="images/vector img/Web devices-bro.png" alt="">
 			<h3>02<span>/03</span></h3>
-			<button onclick="showDetails('solution2')">voir plus</button>
+			<button onclick="showDetails('solution2')">voir plus <i class="fa-solid fa-caret-down" style="color: #2d2a2a;"></i></button>
 			<div id="solution2Details" style="display: none;">
 				<p>Conception et developpement de site-web vitrine (presentation), business E-commerce, Application mobile. avec tout les format. / Personnalisez votre site Web avec vos propres textes, images, vidéos et plus encore. C'est facile de démarrer.</p>
 			</div>
@@ -134,7 +134,7 @@
 			<h2>Sécurité</h2>
 			<img src="images/vector img/Security On-bro.png" alt="">
 			<h3>03<span>/03</span></h3>
-			<button onclick="showDetails('solution3')">voir plus</button>
+			<button onclick="showDetails('solution3')">voir plus <i class="fa-solid fa-caret-down" style="color: #2d2a2a;"></i></button>
 			<div id="solution3Details" style="display: none;">
 				<p>La sécurité Web avancée fournit un proxy entre les utilisateurs et leurs navigateurs pour bloquer les logiciels malveillants et les menaces persistantes avancées. Les menaces évoluent constamment pour contourner les dernières protections en matière de cybersécurité.</p>
 			</div>
