--- a/home.html
+++ b/home.html
@@ -143,6 +143,52 @@
 		</div>
 	</div>
 	<!-- SOLUTION END HERE -->
+
+	<!-- FOOTER SECTION START HERE -->
+	<section class="footer">
+		<div  class="container_footer">
+		  <div class="footer_form">
+			<h3>CONTACT-MOUS</h3>
+			<input type="text" placeholder="Enter your email..."><br>
+			<button>Sign-up Now!</button>
+			<h4><i class="fa-solid fa-square-phone" style="color: #f2f2f2;"></i> FOLLOW US</h4>
+			<h4><i class="fa-regular fa-envelope" style="color: #ededed;"></i> websugumali7@gmail.com</h4>
+		  </div>
+		  <div class="footer_containt">
+			<ul>
+			  <h2>Menu</h2>
+			  <li><a href="#">Plans</a></li>
+			  <li><a href="#">Mode payment</a></li>
+			  <li><a href="#">Hebergement Domaine</a></li>
+			  <li><a href="#">Nos Design</a></li>
+			</ul>
+		  </div>
+	
+		  <div class="footer_containt">
+			<ul>
+			  <h2>Plus Details</h2>
+			  <li><a href="#">A propos de nous</a></li>
+			  <li><a href="#">Nos formation</a></li>
+			  <li><a href="#">Nous rejoindre</a></li>
+			  <li><a href="#">Blog</a></li>
+			</ul>
+		  </div>
+	
+		  <div class="footer_containt">
+			<ul>
+			  <h2>Services</h2>
+			  <li><a href="#">Web Developpement</a></li>
+			  <li><a href="#">Graphique Design</a></li>
+			  <li><a href="#">Mobile App</a></li>
+			  <li><a href="#">Poster Makers</a></li>
+			</ul>
+		  </div>
+		</div> 
+		<div class="owner">
+		  © 2019 All rights reserved | Design by <a href="https://www.facebook.com/profile.php?id=100065837884276&ref=bookmarks">Sugumali Dewi</a>
+		</div> 
+	  </section>
+	<!-- FOOTER SECTION END HERE -->
 	<!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- OWL CAROUSEL -->
