--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     <!-- BOX ICON -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <!-- APP CSS -->
-	<link rel="stylesheet" href="websugu.css">
+	<link rel="stylesheet" href="CSS/websugu.css">
 </head>
 <body>
 	<div class="nav-wrapper">
