--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 					
 						<div class="nav-menu" id="nav-menu">
 							<ul>
-							<li><a href="#">Accueil</a></li>
+							<li><a href="CSS/About.html">Accueil</a></li>
 							<li><a href="#">Services</a></li>
 							<li><a href="#">Plans</a></li>
 							</ul>
