--- a/About.html
+++ b/About.html
@@ -26,9 +26,9 @@
 					
 						<div class="nav-menu" id="nav-menu">
 							<ul>
-							<li><a href="#">Accueil</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="#">Plans</a></li>
+							<li><a href="home.html">Accueil</a></li>
+							<li><a href="About.html">Services</a></li>
+							<li><a href="Plans.html">Plans</a></li>
 							</ul>
 							<div class="dropdown">
 							<button class="dropbtn">Dropdown 
