--- a/Plans.html
+++ b/Plans.html
@@ -30,7 +30,7 @@
 						<div class="nav-menu" id="nav-menu">
 							<ul>
 							<li><a href="home.html">Accueil</a></li>
-							<li><a href="About.html">Notre agence</a></li>
+							<li><a href="About.html">Agence</a></li>
 							<li><a href="Plans.html">Plans</a></li>
 							</ul>
 							<div class="dropdown">
