--- a/Plans.html
+++ b/Plans.html
@@ -74,7 +74,7 @@
 			<small style="display: none;">371.499/FCFA</small>
 			<h3 style="display: none;">Total = 365.499/FCFA</h3>
 			<input type="checkbox" class="checkbox"style="position: absolute;">
-			<button onclick="selectPlan(this)" >Sélectionner</button>
+			<button onclick="selectPlan(this)" >Choisir</button>
 		  </div>
 		  <div class="plan">
 			<h2>SITE BUSINESS</h2>
@@ -82,7 +82,7 @@
 			<small style="display: none;">551.499/FCFA</small>
 			<h3 style="display: none;">Total = 546.499/FCFA</h3>
 			<input type="checkbox" class="checkbox"style="position: absolute;">
-			<button onclick="selectPlan(this)">Sélectionner</button>
+			<button onclick="selectPlan(this)">Choisir</button>
 		  </div>
 		  <div class="plan">
 			<h2>SITE ECOMMERCE</h2>
@@ -90,7 +90,7 @@
 			<small style="display: none;">900.499/FCFA</small>
 			<h3 style="display: none;">Total = 900.100/FCFA</h3>
 			<input type="checkbox" class="checkbox" style="position: absolute;">
-			<button onclick="selectPlan(this)">Sélectionner</button>
+			<button onclick="selectPlan(this)">Choisir</button>
 		  </div>
 		</div>
 		
