--- a/Login.html
+++ b/Login.html
@@ -13,9 +13,7 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
 }
-button{
 
-  }
 
 .popup-content {
   background-color: rgba(255, 255, 255, 0);
@@ -40,8 +38,9 @@ button{
   right: 37%;
   cursor: pointer;
   font-weight: 900;
-  color: #1e1e1e;
-  z-index: 100;
+  text-align: center;
+  z-index: 200;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 @media only screen and (max-width: 768px) {
   .close {
@@ -103,7 +102,7 @@ button{
 <body>
 
   <div class="popup-content">
-    <a href=""><span class="close" id="closePopup">Annuler</span></a>
+    <a href="Plans.html"><span class="close" id="closePopup">Voir les plans</span></a>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 <div class="elfsight-app-eca03fc5-eb58-4b2b-827c-2b019d93d5d7" data-elfsight-app-lazy></div>
 </div>
