--- a/Login.html
+++ b/Login.html
@@ -102,7 +102,7 @@
 <body>
 
   <div class="popup-content">
-    <a href="Plans.html"><span class="close" id="closePopup">Voir les plans</span></a>
+    <a href="Plans.html"><span class="close" id="closePopup">Voir les sites</span></a>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 <div class="elfsight-app-eca03fc5-eb58-4b2b-827c-2b019d93d5d7" data-elfsight-app-lazy></div>
 </div>
