--- a/About.html
+++ b/About.html
@@ -31,13 +31,12 @@
 							<li><a href="Plans.html">Plans</a></li>
 							</ul>
 							<div class="dropdown">
-							<button class="dropbtn">Dropdown 
-								<i class="fa-solid fa-caret-down" style="color: #2d2a2a;"></i>
+							<button class="dropbtn">hébergement <i class="fa-solid fa-caret-down" style="color: #2d2a2a;"></i>
 							</button>
 							<div class="dropdown-content">
-								<a href="#">Link 1</a>
-								<a href="#">Link 2</a>
-								<a href="#">Link 3</a>
+								<a href="Domains.html">Noms de domaine</a>
+								<a href="#">Stockage cloud</a>
+								<a href="#">Enregistrer domaine</a>
 							</div>
 							</div> 
 							
