--- a/Plans.html
+++ b/Plans.html
@@ -34,11 +34,10 @@
 							<li><a href="Plans.html">Plans</a></li>
 							</ul>
 							<div class="dropdown">
-							<button class="dropbtn">hébergement web
-								<i class="fa-solid fa-caret-down" style="color: #2d2a2a;"></i>
+							<button class="dropbtn">hébergement <i class="fa-solid fa-caret-down" style="color: #2d2a2a;"></i>
 							</button>
 							<div class="dropdown-content">
-								<a href="#">Noms de domaine</a>
+								<a href="Domains.html">Noms de domaine</a>
 								<a href="#">Stockage cloud</a>
 								<a href="#">Enregistrer un domaine</a>
 							</div>
