--- a/Domains.html
+++ b/Domains.html
@@ -32,8 +32,7 @@
 								<li><a href="Plans.html">Plans</a></li>
 							</ul>
 							<div class="dropdown">
-							<button class="dropbtn">hébergement
-								<i class="fa-solid fa-caret-down" style="color: #2d2a2a;"></i>
+							<button class="dropbtn">hébergement <i class="fa-solid fa-caret-down" style="color: #2d2a2a;"></i>
 							</button>
 							<div class="dropdown-content">
 								<a href="#">Noms de domaine</a>
