--- a/home.html
+++ b/home.html
@@ -128,7 +128,7 @@
 			<h3>02<span>/03</span></h3>
 			<button onclick="showDetails('solution2')">voir plus <i class="fa-solid fa-caret-down" style="color: #2d2a2a;"></i></button>
 			<div id="solution2Details" style="display: none;">
-				<p>Conception et developpement de site-web vitrine (presentation), business E-commerce, Application mobile. avec tout les format. / Personnalisez votre site Web avec vos propres textes, images, vidéos et plus encore. C'est facile de démarrer.</p>
+				<p>la création et la maintenance de sites internet. Par « site Web », nous entendons un ensemble de pages Web accessibles publiquement sur Internet, telles que : Un réseau privé et fermé, tel que le site intranet de votre entreprise ou de votre école. Le développement Web moderne inclut également les applications Web.</p>
 			</div>
 		</div>
 		<div class="solution">
