--- a/About.html
+++ b/About.html
@@ -110,7 +110,7 @@
 			  <li><a href="#">A propos de nous</a></li>
 			  <li><a href="#">Nos formation</a></li>
 			  <li><a href="#">Nous rejoindre</a></li>
-			  <li><a href="#">Blog</a></li>
+			  <li><a href="Blog.html">Blog</a></li>
 			</ul>
 		  </div>
 	
