--- a/Blog.html
+++ b/Blog.html
@@ -78,7 +78,7 @@
         <h1>Questions fréquemment posées</h1>
         
         <div class="faq-item">
-          <div class="question">Pourquoi site-web pour mon entreprise? <i class="fa-solid fa-plus" style="color: #1f1f1f;float: right;"></i></span></div>
+          <div class="question">Pourquoi site-web pour entreprise?<i class="fa-solid fa-plus" style="color: #1f1f1f;float: right;"></i></span></div>
           <div class="answer">Dans de nombreux pays, ce chiffre est bien plus élevé. Aux États-Unis, par exemple, plus de 90 % des personnes sont en ligne. Sans site Web, votre entreprise est invisible pour ces personnes. À mesure que nous progressons dans l’ère numérique, votre entreprise deviendra invisible pour tout le monde, à moins que vous n’investissiez dans un site Web.</div>
         </div>
         
