--- a/Blog.html
+++ b/Blog.html
@@ -35,7 +35,7 @@
 							<button class="dropbtn">hébergement <i class="fa-solid fa-caret-down" style="color: #2d2a2a;"></i>
 							</button>
 							<div class="dropdown-content">
-								<a href="#">Noms de domaine</a>
+								<a href="Domains.html">Noms de domaine</a>
 								<a href="#">Stockage cloud</a>
 								<a href="#">Enregistrer domaine</a>
 							</div>
