--- a/Domains.html
+++ b/Domains.html
@@ -37,7 +37,7 @@
 							<div class="dropdown-content">
 								<a href="#">Noms de domaine</a>
 								<a href="#">Stockage cloud</a>
-								<a href="#">Enregistrer domaine</a>
+								<a href="#Search.html">Recherche domaine</a>
 							</div>
 							</div> 
 							
