--- a/Blog.html
+++ b/Blog.html
@@ -37,7 +37,7 @@
 							<div class="dropdown-content">
 								<a href="Domains.html">Noms de domaine</a>
 								<a href="#">Stockage cloud</a>
-								<a href="#Search.html">Recherche domaine</a>
+								<a href="Search.html">Recherche domaine</a>
 							</div>
 							</div> 
 							
