--- a/Search.html
+++ b/Search.html
@@ -23,7 +23,7 @@
   <div class="loader" id="loader"></div>
   <a href="Sign-up.html"><div class="plans-container" id="plansContainer"></div></a>
 </div>
-<h1 class="achat">02|</span> Choses à retenir avant d'acheter des domaines</h1>
+<h1 class="achat"><span style="color:chocolate">02|</span> Retenir avant d'acheter des domaines</h1>
   <div class="features-container">
     
     <div class="feature">
