--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
 		<div class="contenair">
 			<div class="cont-start">
 				<div class="make">
-					<h1>Make your own <br>WordPress website</h1>
+					<h1>Créez un Site Web<br> pour votre entreprise</h1>
 				</div>
 				<div class="ssl">
 					<p style="background-color: hsla(0, 0%, 100%, 0.164);"><i class="fa-solid fa-headset" style="color: #f5f5f5;"></i> FREE SSL</p>
