--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
 					<p style="background-color: hsla(0, 0%, 100%, 0.164);"><i class="fa-solid fa-award" style="color: #ededed;"></i> 24/7 SUPPORT</p>
 				</div>
 				<div class="head-price">
-					<h5 style="font-weight: 600;">349 <span style="font-size: 40px;font-weight: 600;color: rgb(36, 36, 37);">149</span>/mois</h5>
+					<h5 style="font-weight: 600;"><span style="font-size: 40px;font-weight: 600;color: rgb(36, 36, 37);">5000f</span>/mois</h5>
 					<hr style="width:190px;margin-top: 20px;">
 				</div>
 				
@@ -80,7 +80,7 @@
 					00:00:00
 				</div>
 				<div class="head-get-started">
-					<button>Get Started now</button>
+					<button>Obtenez votre site</button>
 				</div>
 			</div>
 
