--- a/Domains.html
+++ b/Domains.html
@@ -73,7 +73,7 @@
       <thead>
         <tr>
           <th>Exentions</th>
-          <th>Les montants</th>
+          <th>Annuel</th>
         </tr>
       </thead>
       <tbody>
