--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 	<div class="nav-wrapper">
 		<div class="contenair">
 			<div class="nav">
-				<img src="images/services img/Logo.png" alt="" class="logo">
+				<img src="images/services img/Logo 1.png" alt="" class="logo">
 		
 					
 						<div class="nav-menu" id="nav-menu">
