--- a/home.html
+++ b/home.html
@@ -34,8 +34,8 @@
 								<li><a href="home.html">Accueil</a></li>
 								<li><a href="About.html">Notre agence</a></li>
 								<li><a href="Plans.html">Plans</a></li>
-								<li class="none1"><a href="home.html">Accueil</a></li>
-								<li class="none2"><a href="About.html">Notre agence</a></li>
+								<li><a href="home.html" class="none1">Accueil</a></li>
+								<li><a href="About.html" class="none1">Notre agence</a></li>
 							</ul>
 							<div>
 								<button class="login-btn1">Message</button>
@@ -104,9 +104,52 @@
 	<!-- HEADER END HERE -->
 
 	
+
+
+
+	<!-- ZIK ZAK LAYOUT START -->
+	<div style="text-align:center" class="zik_tit">
+		<h2>Professional Website Design</h2>
+		<p style="font-weight: 400;color: #2d2a2a;">Start Building Your Online Presence</p>
+	  </div>
+	  
+	  
+	  
+	  <!-- Clarity Section -->
+	  <div class="container">
+		<div class="row">
+		  <div class="column-33">
+			<img src="https://cdn.dribbble.com/userupload/13658891/file/original-eb138dd0e90c86d7088349f611c5b5d8.png?resize=1200x900" alt="App" width="335" >
+		  </div>
+		  <div class="column-66">
+			<h1 class="large-font" style="color: #f97000;">Professional Design</h1>
+			<p> With Websugu, you can expect results. Our websites are designed to drive traffic, generate leads, and ultimately help you achieve your business goals.</p>
+			<button class="button_zik">Read More</button>
+		  </div>
+		</div>
+	  </div>
+	  
+	  
+	  <div class="container">
+		<div class="row" id="row">
+		  <div class="column-66" >
+			<h1 class="large-font" style="color: #f97000;"> Effective Results</h1>
+			<p> Websugu prides itself on thinking outside the box and coming up with creative solutions to make your website stand out from the competition.
+			</p>
+			<button class="button_zik">Read More</button>
+		  </div>
+		  <div class="column-33">
+			<img src="https://cdn.dribbble.com/userupload/13658891/file/original-eb138dd0e90c86d7088349f611c5b5d8.png?resize=1200x900" alt="App" width="335" >
+		  </div>
+		</div>
+	  </div>
+	<!-- ZIK ZAK LAYOUT END HERE -->
+
+
+
 	
 	<!--  SOLUTION START HERE -->
-	<div class="container_solution">
+	<!-- <div class="container_solution">
 		<div class="solution">
 			<h2>Hébergement</h2>
 			<img src="images/vector img/Cloud hosting-rafiki.png" alt="">
@@ -134,7 +177,7 @@
 				<p>La sécurité Web avancée fournit un proxy entre les utilisateurs et leurs navigateurs pour bloquer les logiciels malveillants et les menaces persistantes avancées. Les menaces évoluent constamment pour contourner les dernières protections en matière de cybersécurité.</p>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- SOLUTION END HERE -->
 
    
