--- a/About.html
+++ b/About.html
@@ -118,8 +118,8 @@
 		  <div class="footer_form">
 			<img src="images/services img/footer logo.png" class="footer_logo" width="80" alt="Logo"/>
 			<h3>Websugu agengy</h3>
-			<input type="text" placeholder="Enter your email..."><br>
-			<button>Sign-up Now!</button>
+			<input type="text" placeholder="Enter your email..." id="input"><br>
+			<button id="btn">Sign-up Now!</button>
 		  </div>
 		  <div class="footer_containt">
 			<ul>
