--- a/home.html
+++ b/home.html
@@ -32,10 +32,11 @@
 							</div>
 							<ul>
 								<li><a href="home.html">Accueil</a></li>
-								<li><a href="About.html">Notre agence</a></li>
-								<li><a href="Plans.html">Plans</a></li>
-								<li><a href="home.html" class="none1">Accueil</a></li>
-								<li><a href="About.html" class="none1">Notre agence</a></li>
+								<li><a href="About.html">For Developers</a></li>
+								<li><a href="Plans.html">View Plans</a></li>
+								<li><a href="home.html" class="none1">Register Domain</a></li>
+								<li><a href="About.html" class="none1">About Us</a></li>
+								<li><a href="About.html" class="none1">Contact</a></li>
 							</ul>
 							<div>
 								<button class="login-btn1">Message</button>
