--- a/About.html
+++ b/About.html
@@ -81,13 +81,13 @@
 			<img src="https://uploads-ssl.webflow.com/62a0fd9e90434a062811f557/62bd3707d42f5421f4d126bf_Mask%20Group.svg" alt="">
 		  <h2>API Explorer</h2>
 		  <p>Complete API documentation to help you test API calls targeted to various use cases, without writing a line of code.</p>
-		  <button class="button_zik">LEARN MORE</button>
+		  <button class="button_zik" style="font-size: 16px;">LEARN MORE</button>
 		</div>
 		<div class="dev">
 			<img src="https://uploads-ssl.webflow.com/62a0fd9e90434a062811f557/62bd389d4a3a37ed3380a9e0_Mask%20Group2.svg" alt="">
 		  <h2>Quick Start Guide</h2>
 		  <p>Quick and easy walk-through explaining how to jump-start your integration with the FINX APIs.</p>
-		  <button class="button_zik">LEARN MORE</button>
+		  <button class="button_zik" style="font-size: 16px;">LEARN MORE</button>
 		</div>
 		<!-- Add more services as needed -->
 	  </div>
