--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 								<li><a href="About.html">For Developers</a></li>
 								<li><a href="Plans.html">View Plans</a></li>
 								<li><a href="home.html" class="none1">Register Domain</a></li>
-								<li><a href="About.html" class="none1">About Us</a></li>
+								<li><a href="Blog.html" class="none1">About Us</a></li>
 								<li><a href="About.html" class="none1">Contact</a></li>
 							</ul>
 							<div>
