--- a/Plans.html
+++ b/Plans.html
@@ -186,7 +186,7 @@ ul li.price {
 .inp{width: 430px;height: 55px;border-radius: 5px;font-size: 18px; border: none;background-color: #f3f1f1;padding-left: 15px;font-weight: 500;outline: none;}
 input{margin: 10px;}
 
-
+#selectedPlan{font-size: 1.1rem;padding-bottom: 10px;}
 
 
 
@@ -234,7 +234,7 @@ input{margin: 10px;}
   /* height: 25px;
   width: 50px; */
   height: 3.6rem;
-  width: 5.3rem;
+  width: 6.3rem;
   border-radius: 1.6rem;
   padding: 0.3rem;
 }
@@ -279,12 +279,12 @@ ul li {
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 3rem 0;
+  padding: 3.5rem 0;
 }
 ul li.price {
   font-size: 5rem;
   color: hsl(232, 13%, 33%);
-  padding-bottom: 2rem;
+  padding-bottom: 5rem;
 }
 .shadow {
   box-shadow: -5px 5px 15px 1px rgba(0, 0, 0, 0.1);
@@ -295,13 +295,13 @@ ul li.price {
 }
 
 .btn {
-  margin-top: 1rem;
+  margin-top: 1rem;margin-bottom: 20px;
   height: 8.6rem;
   width: 70.3rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 4px;
+  border-radius: 15px;
   background: linear-gradient(
     135deg,
     rgb(240, 182, 163) 0%,
@@ -326,6 +326,46 @@ ul li.price {
 .pack {
   font-size: 3.1rem;
 }
+
+
+/* pop up */
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;z-index: 100;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.57);
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    background-color: #fff;
+    padding: 50px 20px;width: 90%;height: 45vh;
+    border-radius: 10px;
+    text-align: center;
+    position: relative;
+    
+    
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    cursor: pointer;
+    font-size: 74px;
+    color: #f0662b;
+}
+#priceInput{text-align:left ;color: rgb(48, 47, 47);padding-left: 30px;font-size: 6rem;font-weight: bold;border: none;background: none;}
+
+.popup button{width: 85%;height: 120px;border-radius: 10px;font-size: 42px;font-weight: 600;background-color: coral;border: none;color: white;cursor: pointer;margin-bottom: 20px;margin-top: 20px;}
+.inp{width: 85%;height: 120px;border-radius: 10px;font-size: 42px; border: none;background-color: #f3f1f1;padding-left: 20px;font-weight: 500;outline: none;}
+input{margin: 30px;}
+#selectedPlan{font-size: 5.1rem;padding-bottom: 70px;}
+
 }
 
 </style>
@@ -386,7 +426,7 @@ ul li.price {
   <div id="popup" class="popup">
     <div class="popup-content">
         <span class="close" onclick="closePopup()">&times;</span>
-        <h2 id="selectedPlan" style="font-size: 1.1rem;padding-bottom: 10px;" ></h2>
+        <h2 id="selectedPlan" style="" ></h2>
         <input type="text" id="priceInput" placeholder="Enter Price" readonly><br>
         <input type="email" placeholder="Enter email" class="inp"><br>
         <input type="text" placeholder="Phone number (+)" class="inp"><br>
