--- a/Plans.html
+++ b/Plans.html
@@ -343,8 +343,8 @@ ul li.price {
 
 .popup-content {
     background-color: #fff;
-    padding: 50px 20px;width: 90%;height: 50vh;
-    border-radius: 10px;
+    padding: 50px 20px;width: 90%;;
+    border-radius: 30px;
     text-align: center;
     position: relative;
     
@@ -361,8 +361,8 @@ ul li.price {
 }
 #priceInput{text-align:left ;color: rgb(48, 47, 47);padding-left: 30px;font-size: 6rem;font-weight: bold;border: none;background: none;}
 
-.popup button{width: 85%;height: 120px;border-radius: 10px;font-size: 42px;font-weight: 600;background-color: coral;border: none;color: white;cursor: pointer;margin-bottom: 20px;margin-top: 20px;}
-.inp{width: 85%;height: 120px;border-radius: 10px;font-size: 42px; border: none;background-color: #f3f1f1;padding-left: 20px;font-weight: 500;outline: none;}
+.popup button{width: 85%;height: 120px;border-radius: 10px;font-size: 45px;font-weight: 600;background-color: coral;border: none;color: white;cursor: pointer;margin-bottom: 25px;margin-top: 20px;}
+.inp{width: 85%;height: 130px;border-radius: 10px;font-size: 42px; border: none;background-color: #f3f1f1;padding-left: 20px;font-weight: 500;outline: none;}
 input{margin: 30px;}
 #selectedPlan{font-size: 5.1rem;padding-bottom: 70px;}
 
