--- a/Plans.html
+++ b/Plans.html
@@ -359,12 +359,12 @@ ul li.price {
     font-size: 74px;
     color: #f0662b;
 }
-#priceInput{text-align:left ;color: rgb(48, 47, 47);padding-left: 30px;font-size: 19px;font-weight: bold;border: none;background: none;}
+#priceInput{text-align:left ;color: rgb(48, 47, 47);padding-left: 30px;font-size: 5rem;font-weight: bold;border: none;background: none;}
 
 .popup button{width: 85%;height: 135px;border-radius: 10px;font-size: 50px;font-weight: 600;background-color: coral;border: none;color: white;cursor: pointer;margin-bottom: 25px;margin-top: 27px;}
 .inp{width: 85%;height: 135px;border-radius: 10px;font-size: 45px; border: none;background-color: #f3f1f1;padding-left: 20px;font-weight: 500;outline: none;}
 input{margin: 30px;}
-#selectedPlan{font-size: 3.1rem;padding-bottom: 70px;}
+#selectedPlan{font-size: 4.1rem;padding-bottom: 70px;}
 
 }
 
