--- a/Templates.html
+++ b/Templates.html
@@ -38,7 +38,7 @@
 								<li><a href="home.html">Accueil</a></li>
 								<li><a href="About.html">For Developers</a></li>
 								<li><a href="Plans.html">View Plans</a></li>
-								<li><a href="home.html" class="none1">Register Domain</a></li>
+								<li><a href="Templates.html" class="none1">Explore Templates</a></li>
 								<li><a href="About.html" class="none1">About Us</a></li>
 								<li><a href="About.html" class="none1">Contact</a></li>
 							</ul>
