--- a/Templates.html
+++ b/Templates.html
@@ -114,7 +114,7 @@
 				</div>
 				<input type="email" id="email" class="input" placeholder="Enter your email" required><br>
 				<label for="text" class="plus">+</label>
-				<input type="text" id="number" class="input" placeholder="Phone number" required style="position: relative;padding-left: 20px;"><br>
+				<input type="number" id="number" class="input" placeholder="Phone number" required style="position: relative;padding-left: 20px;"><br>
 				<button type="submit">Get this!</button>
 				<small style="font-size: 12px;">Payment secured by .You’ll be taken to a thank you page after the payment.<br>Terms and Privacy.</small>
 			</form>
