--- a/Templates.html
+++ b/Templates.html
@@ -114,7 +114,7 @@
 				</div>
 				<input type="email" id="email" class="input" placeholder="Enter your email" required><br>
 				<label for="text" class="plus">+</label>
-				<input type="number" id="number" class="input" placeholder="Phone number" required style="position: relative;padding-left: 20px;"><br>
+				<input type="tel" id="number" class="input" placeholder="Phone number" required style="position: relative;padding-left: 20px;"><br>
 				<button type="submit">Get this!</button>
 				<small style="font-size: 12px;">Payment secured by .You’ll be taken to a thank you page after the payment.<br>Terms and Privacy.</small>
 			</form>
@@ -124,7 +124,7 @@
 	
   <!--  -->
   <div class="owner">
-    © 2019 All rights reserved | Design by <br><a href="https://www.facebook.com/profile.php?id=100065837884276&ref=bookmarks">Sugumali Dewi</a>
+    © 2019 All rights reserved | Design by <br><a href="https://www.facebook.com/profile.php?id=100065837884276&ref=bookmarks">Websugu</a>
   </div> 
   </section>
 <!-- FOOTER SECTION END HERE -->
